fix weird spacing for annotation label.

--- a/src/assets/styles/components/_mms-spec.scss
+++ b/src/assets/styles/components/_mms-spec.scss
@@ -133,7 +133,6 @@ Styles that apply to both the spec
     margin-right: 6px;
     padding: 2px 5px;
     wrap-text: none;
-    white-space: pre;
     margin: 3px;
     display:inline-block;
     font-size: 12px;
